# CrystalSymmetryAnalyzer

./: .gitignore  CMakeLists.txt
include/: bonds.hpp  constants.hpp  database.hpp  elasticity.hpp  element_database.hpp  group.hpp  lattice.hpp  operations.hpp  plane.hpp  spherical_harmonics.hpp  symmetry.hpp  symmetry_operations.hpp  tolerance_matrix.hpp
include/csvreader/: csv.h
include/itertools/: base.hpp  enumerate.hpp  zip.hpp
src/: elasticity.cpp  lattice.cpp  operations.cpp  plane.cpp  spherical_harmonics.cpp  symmetry_operations.cpp
tests/: itertools_test_enumerate.cpp  itertools_test_zip.cpp  testtools.hpp  testtools_test.cpp
