CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

PROJECT(CppCrystal
	VERSION 1.0
	LANGUAGES CXX
	)
SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
INCLUDE(FetchContent)

IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
  EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
  )
ENDIF()
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-O0")
SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")

FIND_PACKAGE(Eigen3 REQUIRED)
LINK_DIRECTORIES(${Eigen_INCLUDE_DIRS})

ADD_LIBRARY(symmetry_operations SHARED ${PROJECT_SOURCE_DIR}/src/symmetry_operations.cpp)
TARGET_INCLUDE_DIRECTORIES(symmetry_operations PUBLIC ${PROJECT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(symmetry_operations PUBLIC ${Eigen_LIBRARIES})

ADD_EXECUTABLE(crystal ${PROJECT_SOURCE_DIR}/src/lattice.cpp)
TARGET_INCLUDE_DIRECTORIES(crystal PUBLIC ${PROJECT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(crystal PUBLIC ${Eigen_LIBRARIES} symmetry_operations)
